--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>O-Ringen Testside</title>
-<link rel="icon" href="https://oringen.se/images/18.660bf8cf18c8acbdb7981c5f/1705429804437/O-Ringen_Logotyp_Generell_Vit_RGB%20(1).svg">
+<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Logo-AHO_Oslo.svg/800px-Logo-AHO_Oslo.svg.png">
   <style>
     body {
       margin: 0;
       padding: 0;
-      background: url('https://i.postimg.cc/Y0R9SPcK/Skjermbilde-2025-03-20-172320.png') no-repeat center center fixed;
+      background: url('https://i.postimg.cc/CKPWHCfz/Skjermbilde-2025-06-23-230404.png') no-repeat center center fixed;
       background-size: cover;
       font-family: Arial, sans-serif;
     }
