--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>O-Ringen Testside</title>
+  <title>AHO Testside</title>
 <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Logo-AHO_Oslo.svg/800px-Logo-AHO_Oslo.svg.png">
   <style>
     body {
