--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AHO Testside</title>
-<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Logo-AHO_Oslo.svg/800px-Logo-AHO_Oslo.svg.png">
+<link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDcoEHWIKkuQbtNrPFdCA0K_GHlygf5IXtiw&s">
   <style>
     body {
       margin: 0;
